# ventoy-toybox-feed

./: .justfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/toybox_feed/: cli.py  helpers.py  settings.py
src/toybox_feed/scrapers/: distrowatch.py
src/toybox_feed/utils/: async_download.py  dl.py  sync_download.py  torrent.py
src/vtoybox_feed/: cli.py
src/vtoybox_feed/scrapers/: distrowatch.py
tests/: test_dl.py  test_get_feeds.py
