[tool.poetry]
name = "ventoy-toybox-feed"
version = "0.1.0"
description = ""
authors = ["nozwock <57829219+nozwock@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ventoy_toybox_feed"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
