[tool.poetry]
name = "ventoy-toybox-feed"
version = "22.10.26"
description = ""
authors = ["nozwock <57829219+nozwock@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "toybox_feed", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
torrentool = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
yaspin = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
