[tool.poetry]
name = "ventoy-toybox-feed"
version = "22.10.26"
description = ""
authors = [
  "nozwock <57829219+nozwock@users.noreply.github.com>",
  "Rishab Raj <114160922+dedproxy@users.noreply.github.com>",
]
readme = "README.md"
packages = [{ include = "toybox_feed", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
torrentool = "^1.1.1"
aiofiles = "^22.1.0"
aiohttp = "^3.8.3"
asyncio = "^3.4.3"
aiolimiter = "^1.0.0"
rich = "^12.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
yaspin = "^2.2.0"
isort = "^5.10.1"

[tool.black]
# line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
